# arb-bot

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: fee-check.yml
scripts/: check_fee_schedule.sh
src/: config.rs  detector.rs  executor.rs  main.rs  storage.rs  telegram.rs
src/kalshi/: auth.rs  client.rs  types.rs
tests/fixtures/: orderbook_both_sides.json  orderbook_null_yes.json
