[package]
name = "bracket-arb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rsa = "0.9"
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
dotenvy = "0.15"
toml = "0.8"

[dev-dependencies]
proptest = "1"
rand = "0.8"
